data/derived/comb/progs/unify/prog1076.ml.out
Characters 197-214:
  | Average(p1, p2) -> (evalhelper p1 x y * evalhelper p2 x y) /. 2.0
                        ^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
